# Data_Pipeline

./: CMakeLists.txt  README.md
data/: anomalyFile_19-Mar-2025.json  anomalyFile_23-Mar-2025.json  anomalyFile_27-Mar-2025.json  anomalyFile_31-Mar-2025.json  config.txt
include/: Aggregation.h  Anomaly.h  LogEntry.h  LogFileReader.h  LogLineProcessor.h  LogParser.h
src/: Aggregation.cpp  ChecksAnomaly.cpp  LogFileReader.cpp  LogLineProcessor.cpp  LogParser.cpp  main.cpp  test.cpp
